# scoell

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  jest.config.js  nest-cli.json  package.json  tsconfig.json
apps/api/prisma-seed/: seed.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/admissions/: admissions.controller.ts  (+2 more)
apps/api/test/: api.e2e-spec.ts  feature-flags.spec.ts  grading.spec.ts  second-wave.e2e-spec.ts
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/: gradle.properties
apps/mobile/lib/: main.dart
apps/mobile/test/: widget_test.dart
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: full-cycle.spec.ts
apps/web/src/: main.tsx
docs/: AUDIT.md  INVENTORY.md  PRINT_TEMPLATES.md  PRODUCTION_READINESS.md  RBAC_AUDIT.md
docs/brand/: BRAND_GUIDELINES.md
docs/print-samples/: certificate-completion.html  certificate-enrollment.html  certificate-graduation.html  generate.mjs  receipt-paid.html  receipt.html  reportcard.html  statement.html  transcript-empty.html  transcript.html
prisma/: schema.prisma
scripts/: check-dead-buttons.mjs
src/app/: App.tsx
src/app/brand/: Logo.tsx
src/app/components/: shared.tsx
src/styles/: fonts.css  theme.css
(+101 files in other folders)
