# تطبيق منارة لسطح المكتب — Tauri 2 يغلّف apps/web
[package]
name = "manarah-desktop"
version = "0.1.0"
description = "منصة منارة لإدارة المدارس والمعاهد — تطبيق ويندوز"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2"   # حفظ موضع/حجم النافذة
tauri-plugin-notification = "2"   # إشعارات ويندوز الأصلية
tauri-plugin-updater = "2"        # التحديث التلقائي
tauri-plugin-stronghold = "2"     # خزنة آمنة للـ tokens (بديل Credential Manager عبر واجهة TokenStore)
tauri-plugin-sql = { version = "2", features = ["sqlite"] } # cache محلي + outbox للعمل offline
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
strip = true
